--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -20,12 +20,22 @@
   position: fixed;
   top: 0;
   left: 0;
+
   .item-nav {
     padding: 5px 25px;
-    p {
+    height: 73px;
+    a {
+      text-decoration: none;
       color: white;
-      font-size: 18px;
-      margin: 0;
+      p {
+        color: white;
+        font-size: 18px;
+        margin: 0;
+        opacity: 0.7;
+        &:hover {
+          opacity: 1;
+        }
+      }
     }
   }
 }
@@ -42,12 +52,7 @@
     display: block;
     width: 100%;
     height: 150px;
-    background: linear-gradient(
-      0deg,
-      rgba(255, 255, 255, 1),
-      rgba(255, 255, 255, 0.3),
-      rgba(255, 255, 255, 0)
-    );
+    background: linear-gradient(0deg, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0));
   }
 
   .banner-home {
