--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -1,6 +1,4 @@
 #root {
-  margin: -20px 0 0 0 !important;
-  padding: 0 !important;
   font-family: "Montserrat";
 }
 
@@ -10,6 +8,29 @@
   flex-direction: column;
 }
 
+.btn-rounded-100 {
+  background-color: transparent;
+  color: white;
+  border-radius: 2rem;
+  border: 1px solid white;
+  padding: 8px 25px;
+  font-size: 18px;
+  cursor: pointer;
+  &:focus {
+    outline: none;
+  }
+}
+
+.btn-violet {
+  transition: 0.4s;
+  &:hover {
+    background-color: white;
+    color: #9c5fd4;
+    box-shadow: 2px 6px 12px rgba(0, 0, 0, 0.3);
+  }
+}
+
+//header
 .menu {
   display: flex;
   height: 73px;
@@ -40,15 +61,24 @@
   }
 }
 
+.logo {
+  width: 50px;
+  height: 80px;
+  position: absolute;
+  left: 20px;
+  top: 5px;
+}
+
+//home page
 #homepage {
   min-height: calc(100vh - 73px);
   width: 100%;
-  padding: 75px 0 150px 0;
+  padding: 73px 0 150px 0;
   background: linear-gradient(35deg, #9c5fd4, #458bed);
   &:before {
     content: "";
     position: absolute;
-    bottom: -132px;
+    bottom: -150px;
     display: block;
     width: 100%;
     height: 150px;
@@ -108,36 +138,7 @@
   }
 }
 
-.btn-rounded-100 {
-  background-color: transparent;
-  color: white;
-  border-radius: 2rem;
-  border: 1px solid white;
-  padding: 8px 25px;
-  font-size: 18px;
-  cursor: pointer;
-  &:focus {
-    outline: none;
-  }
-}
-
-.btn-violet {
-  transition: 0.4s;
-  &:hover {
-    background-color: white;
-    color: #9c5fd4;
-    box-shadow: 2px 6px 12px rgba(0, 0, 0, 0.3);
-  }
-}
-
-.logo {
-  width: 50px;
-  height: 80px;
-  position: absolute;
-  left: 20px;
-  top: 5px;
-}
-
+//card component
 .card-component {
   background-color: white;
   width: 225px;
@@ -158,4 +159,11 @@
     height: 135px;
     border-radius: 8px 8px 0 0;
   }
+}
+
+//Contact page
+#contact-page {
+  padding: 73px 0 150px 0;
+  background: linear-gradient(35deg, #9c5fd4, #458bed);
+  min-height: calc(100vh - 73px);
 }
