--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -1,3 +1,5 @@
+$main-color-text: #304973;
+
 #root {
   font-family: "Montserrat";
 }
@@ -33,6 +35,7 @@
 //header
 .menu {
   display: flex;
+  z-index: 1024;
   height: 73px;
   justify-content: flex-end;
   width: calc(100% - 50px);
@@ -61,14 +64,6 @@
   }
 }
 
-.logo {
-  width: 50px;
-  height: 80px;
-  position: absolute;
-  left: 20px;
-  top: 5px;
-}
-
 //home page
 #homepage {
   min-height: calc(100vh - 73px);
@@ -91,10 +86,17 @@
     .content {
       color: white;
       max-width: 600px;
+      min-width: 600px;
+      margin: 0 10px;
       display: flex;
       justify-content: center;
       flex-direction: column;
-      height: calc(100vh - 130px);
+      height: calc(100vh - 230px);
+      .logo {
+        width: 65px;
+        height: 98px;
+        margin: 0 0 75px 10px;
+      }
       h1 {
         font-size: 42px;
         margin: 0;
@@ -111,12 +113,12 @@
       display: flex;
       justify-content: center;
       flex-direction: column;
-      height: calc(100vh - 130px);
+      height: calc(100vh - 180px);
       .display-card {
         display: flex;
         justify-content: center;
         .card-component {
-          transform: rotateY(-35deg) rotateX(25deg) rotate(8deg);
+          transform: rotateY(-35deg) rotateX(25deg) rotate(8deg) rotateZ(-3deg);
         }
       }
       .position-top {
@@ -163,7 +165,122 @@
 
 //Contact page
 #contact-page {
-  padding: 73px 0 150px 0;
+  padding: 73px 0 0 0;
+  background: linear-gradient(35deg, #9c5fd4, #458bed);
+  min-height: calc(100vh - 73px);
+  .banner-home {
+    display: flex;
+    justify-content: center;
+    height: calc(100vh - 73px);
+    .content {
+      color: white;
+      max-width: 600px;
+      min-width: 600px;
+      margin: 0 10px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      height: calc(100vh - 230px);
+      .logo {
+        width: 65px;
+        height: 98px;
+        margin: 0 0 75px 10px;
+      }
+      h1 {
+        font-size: 42px;
+        margin: 0;
+      }
+      p {
+        font-size: 20px;
+        font-weight: normal;
+        margin: 40px 0;
+      }
+    }
+    .container-form {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      .form-contact {
+        color: $main-color-text;
+        background-color: white;
+        border-radius: 7px;
+        height: fit-content;
+        padding: 35px 15px 55px 15px;
+        box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+        transform: rotateY(19deg) rotateX(-10deg) rotate(2deg);
+        h2 {
+          margin: 0 0 35px 0;
+          text-align: center;
+        }
+
+        label {
+          display: block;
+          margin: 15px 15px 5px 20px;
+        }
+
+        textarea {
+          margin: 0 15px;
+          width: calc(100% - 50px);
+          min-height: 115px;
+          border: 1px solid #efe5e5;
+          border-radius: 6px;
+          box-shadow: 3px 3px 12px #e4e3e3;
+          padding: 5px 10px;
+          &:focus {
+            outline: none;
+          }
+        }
+
+        input {
+          margin: 0 15px;
+          border: 1px solid #e5e5e5;
+          padding: 10px 15px;
+          border-radius: 6px;
+          box-shadow: 3px 3px 12px #e4e3e3;
+          &:focus {
+            outline: none;
+          }
+        }
+        .container-input {
+          display: flex;
+        }
+      }
+    }
+  }
+  .other-information {
+    display: flex;
+    .information {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      color: $main-color-text;
+      min-width: 300px;
+      background-color: white;
+      height: 350px;
+      padding: 25px 25px 25px 50px;
+      label {
+        margin: 20px 0 5px 0;
+        display: block;
+        font-weight: bold;
+      }
+      p {
+        margin: 0;
+      }
+    }
+    .map {
+      width: calc(100% - 375px);
+      height: 100%;
+      iframe {
+        width: 100%;
+        height: 400px;
+      }
+    }
+  }
+}
+
+//Login page
+#login-page {
+  padding: 73px 0 0 0;
   background: linear-gradient(35deg, #9c5fd4, #458bed);
   min-height: calc(100vh - 73px);
 }
