--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -2,6 +2,7 @@ $main-color-text: #304973;
 
 #root {
   font-family: "Montserrat";
+  overflow-x: hidden;
 }
 
 .vertical-center {
@@ -85,6 +86,13 @@ $main-color-text: #304973;
   }
 }
 
+.active-animation {
+  left: 0 !important;
+  .card-component {
+    opacity: 1 !important;
+  }
+}
+
 //home page
 #homepage {
   min-height: calc(100vh - 73px);
@@ -136,25 +144,39 @@ $main-color-text: #304973;
       flex-direction: column;
       height: calc(100vh - 180px);
       .display-card {
+        transition: 1s;
         display: flex;
         justify-content: center;
         .card-component {
           transform: rotateY(-35deg) rotateX(25deg) rotate(8deg) rotateZ(-3deg);
         }
       }
-      .position-top {
+      #position-top {
+        position: relative;
+        left: calc(100% + 500px);
         .card-component {
           position: relative;
+          opacity: 0;
           top: 120px;
           left: 45px;
         }
       }
-      .position-bottom {
+      #position-bottom {
+        position: relative;
+        left: calc(100% + 500px);
         .card-component {
           position: relative;
+          opacity: 0;
           z-index: 3;
           top: -120px;
           left: -45px;
+        }
+      }
+      #position-middle {
+        position: relative;
+        left: calc(100% + 500px);
+        .card-component {
+          opacity: 0;
         }
       }
     }
@@ -164,6 +186,7 @@ $main-color-text: #304973;
 //card component
 .card-component {
   background-color: white;
+  transition: 1s;
   width: 225px;
   height: 275px;
   border-radius: 8px;
