feat(login): user registration

--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -1,4 +1,6 @@
+//color
 $main-color-text: #304973;
+$color-error: #f93737;
 
 #root {
   font-family: "Montserrat";
@@ -60,422 +62,7 @@ $main-color-text: #304973;
   }
 }
 
-#menu {
-  display: flex;
-  transition: 0.4s;
-  z-index: 1024;
-  height: 73px;
-  justify-content: flex-end;
-  width: calc(100% - 50px);
-  margin: 0;
-  padding: 0 25px;
-  position: fixed;
-  top: 0;
-  left: 0;
-
-  .item-nav {
-    padding: 0 25px;
-    height: 73px;
-    a {
-      text-decoration: none;
-      p {
-        color: white;
-        font-size: 18px;
-        margin: 0;
-        opacity: 0.7;
-        &:hover {
-          opacity: 1;
-        }
-      }
-    }
-  }
-}
-
-.active-animation {
-  left: 0 !important;
-  .card-component {
-    opacity: 1 !important;
-  }
-}
-
-//home page
-#homepage {
-  min-height: calc(100vh - 73px);
-  width: 100%;
-  padding: 73px 0 150px 0;
-  background: linear-gradient(35deg, #9c5fd4, #458bed);
-  &:before {
-    content: "";
-    position: absolute;
-    bottom: -150px;
-    display: block;
-    width: 100%;
-    height: 150px;
-    background: linear-gradient(0deg, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0));
-  }
-
-  .banner-home {
-    display: flex;
-    justify-content: center;
-    .content {
-      color: white;
-      max-width: 600px;
-      min-width: 600px;
-      margin: 0 10px;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      height: calc(100vh - 230px);
-      .logo {
-        width: 65px;
-        height: 98px;
-        margin: 0 0 75px 10px;
-      }
-      h1 {
-        font-size: 42px;
-        margin: 0;
-      }
-      p {
-        font-size: 20px;
-        font-weight: normal;
-        margin: 40px 0;
-      }
-    }
-    .illustration {
-      margin: 0 0 0 50px;
-      max-width: 530px;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      height: calc(100vh - 180px);
-      .display-card {
-        transition: 1s;
-        display: flex;
-        justify-content: center;
-        .card-component {
-          transform: rotateY(-35deg) rotateX(25deg) rotate(8deg) rotateZ(-3deg);
-        }
-      }
-      #position-top {
-        position: relative;
-        left: calc(100% + 500px);
-        .card-component {
-          position: relative;
-          opacity: 0;
-          top: 120px;
-          left: 45px;
-        }
-      }
-      #position-bottom {
-        position: relative;
-        left: calc(100% + 500px);
-        .card-component {
-          position: relative;
-          opacity: 0;
-          z-index: 3;
-          top: -120px;
-          left: -45px;
-        }
-      }
-      #position-middle {
-        position: relative;
-        left: calc(100% + 500px);
-        .card-component {
-          opacity: 0;
-        }
-      }
-    }
-  }
-}
-
-//card component
-.card-component {
-  background-color: white;
-  transition: 1s;
-  width: 225px;
-  height: 275px;
-  border-radius: 8px;
-  margin: 3px;
-  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
-  .card-content {
-    color: black;
-    padding: 10px;
-    p {
-      margin: 0;
-    }
-  }
-  .card-illustration {
-    background-color: #e5e5e5;
-    width: 100%;
-    height: 135px;
-    border-radius: 8px 8px 0 0;
-  }
-}
-
-//Contact page
-#contact-page {
-  padding: 73px 0 0 0;
-  background: linear-gradient(35deg, #9c5fd4, #458bed);
-  min-height: calc(100vh - 73px);
-  .banner-home {
-    display: flex;
-    justify-content: center;
-    height: calc(100vh - 73px);
-    .content {
-      color: white;
-      max-width: 600px;
-      min-width: 600px;
-      margin: 0 10px;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      height: calc(100vh - 230px);
-      .logo {
-        width: 65px;
-        height: 98px;
-        margin: 0 0 75px 10px;
-      }
-      h1 {
-        font-size: 42px;
-        margin: 0;
-      }
-      p {
-        font-size: 20px;
-        font-weight: normal;
-        margin: 40px 0;
-      }
-    }
-    .container-form {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      .form-contact {
-        color: $main-color-text;
-        background-color: white;
-        border-radius: 7px;
-        height: fit-content;
-        padding: 35px 15px 55px 15px;
-        box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
-        transform: rotateY(15deg) rotateX(-15deg) rotate(1deg);
-        h2 {
-          margin: 0 0 35px 0;
-          text-align: center;
-        }
-
-        label {
-          display: block;
-          margin: 15px 15px 5px 20px;
-        }
-
-        textarea {
-          margin: 0 15px;
-          width: calc(100% - 50px);
-          min-height: 115px;
-          border: 1px solid #efe5e5;
-          border-radius: 6px;
-          box-shadow: 3px 3px 12px #e4e3e3;
-          padding: 5px 10px;
-          &:focus {
-            outline: none;
-          }
-        }
-
-        input {
-          margin: 0 15px;
-          border: 1px solid #e5e5e5;
-          padding: 10px 15px;
-          border-radius: 6px;
-          box-shadow: 3px 3px 12px #e4e3e3;
-          &:focus {
-            outline: none;
-          }
-        }
-        .container-input {
-          display: flex;
-        }
-        .btn {
-          background-color: #efefefbe;
-          color: $main-color-text;
-          font-size: 18px !important;
-          padding: 12px 25px;
-          border: none;
-          margin: 25px 15px 0 15px;
-          border-radius: 8px;
-          width: calc(100% - 30px);
-          cursor: pointer;
-          &:hover {
-            border-color: #9c5fd4;
-            background: linear-gradient(35deg, #9c5fd4, #458bed) !important;
-            color: white;
-            box-shadow: none;
-          }
-        }
-      }
-    }
-  }
-  .other-information {
-    display: flex;
-    .information {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      color: $main-color-text;
-      min-width: 300px;
-      background-color: white;
-      height: 350px;
-      padding: 25px 25px 25px 50px;
-      label {
-        margin: 20px 0 5px 0;
-        display: block;
-        font-weight: bold;
-      }
-      p {
-        margin: 0;
-      }
-    }
-    .map {
-      width: calc(100% - 375px);
-      height: 100%;
-      iframe {
-        width: 100%;
-        height: 400px;
-      }
-    }
-  }
-}
-
-//Login page
-#login-page {
-  padding: 73px 0 0 0;
-  background: linear-gradient(35deg, #9c5fd4, #458bed);
-  min-height: calc(100vh);
-  position: absolute;
-  top: -73px;
-  width: 100%;
-  display: flex;
-  label {
-    display: block;
-    color: $main-color-text;
-    margin: 0 0 5px 0;
-    font-weight: bold;
-  }
-  input {
-    padding: 8px 15px;
-    border-radius: 8px;
-    border: 1px solid #e7e7e7;
-    background-color: #e7e7e7;
-    color: $main-color-text;
-    width: calc(100% - 30px);
-    &:focus {
-      outline: none;
-      border-radius: 8px;
-      border: 1px solid #b188d8;
-    }
-  }
-  .btn {
-    background: linear-gradient(35deg, #9c5fd4, #458bed) !important;
-    color: white;
-    border: none;
-    font-size: 15px !important;
-    padding: 8px 25px;
-    margin: 25px 0 0 0;
-    border-radius: 8px;
-    width: 100%;
-    cursor: pointer;
-  }
-  .container-logs-right {
-    width: 50%;
-    height: 100vh;
-    overflow: hidden;
-    .container-form {
-      margin: 200px 0 0 0;
-      #container-name-log {
-        padding: 25px;
-        border-radius: 8px;
-        background-color: white;
-        width: 100%;
-        max-width: 400px;
-        position: relative;
-        transition: 0.4s;
-        top: 180px;
-        left: 0;
-        transform: translateX(-100%);
-        box-shadow: none;
-        opacity: 0;
-      }
-      .animation-name-register {
-        transform: translateX(5%) !important;
-        box-shadow: 0 -3px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22) !important;
-        opacity: 1 !important;
-      }
-    }
-  }
-  .container-logs {
-    width: 50%;
-    background-color: white;
-    height: 100vh;
-    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
-    .container-form {
-      margin: 200px 0 0 0;
-      #container-email-log,
-      #container-password-log {
-        padding: 25px;
-        border-radius: 8px;
-        background-color: white;
-        width: 100%;
-        max-width: 400px;
-        position: relative;
-      }
-
-      #container-email-log {
-        transition: 0.4s;
-        padding: 25px 25px 45px 25px;
-        top: 0;
-        left: 100%;
-        transform: translateX(-85%);
-        box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
-      }
-      #container-password-log {
-        transition: 0.4s;
-        top: -15px;
-        left: 100%;
-        transform: translateX(-73%);
-        box-shadow: 0 -3px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
-        .underButton {
-          color: $main-color-text;
-          font-size: 12px;
-          span {
-            text-decoration: underline;
-            cursor: pointer;
-            &:hover {
-              font-weight: bold;
-            }
-          }
-        }
-      }
-
-      #title {
-        padding: 0 100px;
-        transition: 0.4s;
-        color: $main-color-text;
-        font-size: 36px;
-        width: fit-content;
-        margin: 0 0 25px auto;
-      }
-
-      .animation-title-register {
-        transform: translateX(100%);
-        color: white !important;
-      }
-
-      .animation-email-register {
-        transform: translateX(-15%) !important;
-      }
-
-      .animation-password-register {
-        top: 130px !important;
-        transform: translateX(-27%) !important;
-      }
-    }
-  }
-}
+@import "./scss/Login.scss";
+@import "./scss/Contact.scss";
+@import "./scss/Home.scss";
+@import "./scss/Header.scss";
