--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -12,51 +12,51 @@ $main-color-admin-text: #27425f;
 $main-color-admin-selected: #4036ae;
 
 #root {
-    font-family: "Montserrat";
-    overflow-x: hidden;
+  font-family: "Montserrat";
+  overflow-x: hidden;
 }
 
 .vertical-center {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .btn-rounded-100 {
-    background-color: transparent;
-    color: white;
-    border-radius: 2rem;
-    border: 1px solid white;
-    padding: 8px 25px;
-    font-size: 18px;
-    cursor: pointer;
-    &:focus {
-        outline: none;
-    }
+  background-color: transparent;
+  color: white;
+  border-radius: 2rem;
+  border: 1px solid white;
+  padding: 8px 25px;
+  font-size: 18px;
+  cursor: pointer;
+  &:focus {
+    outline: none;
+  }
 }
 
 .btn-violet {
-    transition: 0.4s;
-    &:hover {
-        background-color: white;
-        color: #9c5fd4;
-        box-shadow: 2px 6px 12px rgba(0, 0, 0, 0.3);
-    }
+  transition: 0.4s;
+  &:hover {
+    background-color: white;
+    color: #9c5fd4;
+    box-shadow: 2px 6px 12px rgba(0, 0, 0, 0.3);
+  }
 }
 
 .flex {
-    display: flex;
+  display: flex;
 }
 
 .template-admin {
-    padding: 75px 0 15px;
-    background-color: $main-color-admin-background;
-    min-height: calc(100vh - 90px);
+  padding: 75px 0 15px;
+  background-color: $main-color-admin-background;
+  min-height: calc(100vh - 90px);
 }
 
 @import "./scss/Login.scss";
 @import "./scss/Contact.scss";
 @import "./scss/Home.scss";
 @import "./scss/Header.scss";
-@import "./scss/admin/HeaderAdmin.scss";
+@import "./scss/HeaderAdmin.scss";
 @import "./scss/admin/Dashboard.scss";
