--- a/front/src/scss/Header.scss
+++ b/front/src/scss/Header.scss
@@ -11,6 +11,13 @@
   position: fixed;
   top: 0;
   left: 0;
+  .vertical-center {
+    .logo {
+      width: auto;
+      height: 55px;
+      margin: 0 0 0 50px;
+    }
+  }
 
   .item-nav {
     padding: 0 25px;
@@ -18,22 +25,16 @@
     a {
       text-decoration: none;
       p {
-        color: white;
         font-size: 18px;
         margin: 0;
-        opacity: 0.7;
-        &:hover {
-          opacity: 1;
-        }
       }
     }
   }
 }
 
-.opaque-nav-bar {
+.opaque-nav-bar.light {
   background-color: rgba($color: #000000, $alpha: 0.4);
-  //box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
-  height: 60px !important ;
+  height: 60px !important;
   .item-nav {
     height: 60px !important;
     a {
@@ -43,7 +44,7 @@
       .btn-violet {
         font-size: 15px !important;
         &:hover {
-          border-color: #9c5fd4;
+          border-color: #9c5fd4 !important;
           background: linear-gradient(35deg, #9c5fd4, #458bed) !important;
           color: white;
           box-shadow: none;
@@ -57,5 +58,37 @@
   left: 0 !important;
   .card-component {
     opacity: 1 !important;
+  }
+}
+
+//theme light Menu
+#menu.light {
+  .item-nav {
+    a {
+      p {
+        color: white;
+        opacity: 0.7;
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
+  }
+}
+
+//theme opaque Menu
+
+#menu.opaque {
+  background-color: black;
+  .item-nav {
+    a {
+      p {
+        color: white;
+        opacity: 0.7;
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
   }
 }
