--- a/front/src/scss/Header.scss
+++ b/front/src/scss/Header.scss
@@ -1,94 +1,139 @@
 //Menu
 #menu {
-  display: flex;
-  transition: 0.4s;
-  z-index: 1024;
-  height: 73px;
-  justify-content: flex-end;
-  width: calc(100% - 50px);
-  margin: 0;
-  padding: 0 25px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  .vertical-center {
-    .logo {
-      width: auto;
-      height: 55px;
-      margin: 0 0 0 50px;
-    }
-  }
-
-  .item-nav {
-    padding: 0 25px;
+    display: flex;
+    transition: 0.4s;
+    z-index: 1024;
     height: 73px;
-    a {
-      text-decoration: none;
-      p {
-        font-size: 18px;
-        margin: 0;
-      }
-    }
-  }
-}
-
-.opaque-nav-bar.light {
-  background-color: rgba($color: #000000, $alpha: 0.4);
-  height: 60px !important;
-  .item-nav {
-    height: 60px !important;
-    a {
-      p {
-        font-size: 15px !important;
-      }
-      .btn-violet {
-        font-size: 15px !important;
-        &:hover {
-          border-color: #9c5fd4 !important;
-          background: linear-gradient(35deg, #9c5fd4, #458bed) !important;
-          color: white;
-          box-shadow: none;
+    justify-content: flex-end;
+    width: calc(100% - 50px);
+    margin: 0;
+    padding: 0 25px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    .vertical-center {
+        .logo {
+            width: auto;
+            height: 55px;
+            margin: 0 0 0 50px;
         }
-      }
     }
-  }
+
+    .item-nav {
+        padding: 0 25px;
+        height: 73px;
+        a {
+            text-decoration: none;
+            p {
+                font-size: 18px;
+                margin: 0;
+            }
+        }
+    }
 }
 
 .active-animation {
-  left: 0 !important;
-  .card-component {
-    opacity: 1 !important;
-  }
+    left: 0 !important;
+    .card-component {
+        opacity: 1 !important;
+    }
 }
 
-//theme light Menu
-#menu.light {
-  .item-nav {
-    a {
-      p {
-        color: white;
-        opacity: 0.7;
-        &:hover {
-          opacity: 1;
+//theme transparent Menu
+#menu.transparent {
+    #activated-tab-nav {
+        a,
+        p {
+            color: white;
+            font-weight: bold;
+            opacity: 1;
         }
-      }
     }
-  }
+    .item-nav {
+        a {
+            p {
+                color: white;
+                opacity: 0.7;
+                &:hover {
+                    opacity: 1;
+                }
+            }
+        }
+    }
+    .btn-rounded-100 {
+        background-color: transparent;
+        color: white;
+        border: 1px solid white;
+    }
+    .btn-violet {
+        transition: 0.4s;
+        &:hover {
+            background-color: white;
+            color: #9c5fd4;
+            box-shadow: 2px 6px 12px rgba(0, 0, 0, 0.3);
+        }
+    }
 }
 
 //theme opaque Menu
 
 #menu.opaque {
-  background-color: black;
-  .item-nav {
-    a {
-      p {
-        color: white;
-        opacity: 0.7;
-        &:hover {
-          opacity: 1;
+    background-color: white;
+    box-shadow: 0 4px 12px $main-color-admin-hover;
+
+    #activated-tab-nav {
+        a,
+        p {
+            color: $main-color-admin-text;
+            font-weight: bold;
         }
-      }
     }
-  }
+
+    .item-nav {
+        a {
+            p {
+                color: $main-color-admin-disabled;
+                &:hover {
+                    color: $main-color-admin-text;
+                }
+            }
+        }
+    }
+    .btn-rounded-100 {
+        background-color: transparent;
+        color: $main-color-admin-disabled;
+        border: 1px solid $main-color-admin-disabled;
+    }
+    .btn-violet {
+        &:hover {
+            border-color: #9c5fd4 !important;
+            background: linear-gradient(35deg, #9c5fd4, #458bed) !important;
+            color: white !important;
+            box-shadow: none;
+        }
+    }
+}
+
+//
+
+.opaque-nav-bar.transparent {
+    background-color: rgba($color: #000000, $alpha: 0.4);
+    height: 60px !important;
+    .item-nav {
+        height: 60px !important;
+        a {
+            p {
+                font-size: 15px !important;
+            }
+        }
+        .btn-violet {
+            font-size: 15px !important;
+            &:hover {
+                border-color: #9c5fd4 !important;
+                background: linear-gradient(35deg, #9c5fd4, #458bed) !important;
+                color: white !important;
+                box-shadow: none;
+            }
+        }
+    }
 }
