--- a/front/src/scss/admin/Dashboard.scss
+++ b/front/src/scss/admin/Dashboard.scss
@@ -1,2 +1,26 @@
 #dashboard-admin {
+    color: $main-color-admin-text;
+    h1 {
+        font-size: 46px;
+        margin: 50px 15px;
+    }
+}
+
+.first-part-page {
+    display: flex;
+    justify-content: center;
+    .column {
+        width: 50%;
+        padding: 5px;
+    }
+}
+
+.box.white {
+    background-color: white;
+    border-radius: 8px;
+    padding: 15px;
+    box-shadow: 3px 3px 12px $main-color-admin-hover;
+    h2 {
+        margin-top: 0;
+    }
 }
