--- a/front/src/scss/admin/Dashboard.scss
+++ b/front/src/scss/admin/Dashboard.scss
@@ -1,26 +1,84 @@
 #dashboard-admin {
-    color: $main-color-admin-text;
-    h1 {
-        font-size: 46px;
-        margin: 50px 15px;
-    }
+  color: $main-color-admin-text;
+  h1 {
+    font-size: 46px;
+    margin: 25px 15px 50px 15px;
+  }
 }
 
-.first-part-page {
-    display: flex;
-    justify-content: center;
-    .column {
-        width: 50%;
-        padding: 5px;
-    }
+.part-page {
+  display: flex;
+  justify-content: center;
+  .column {
+    width: 50%;
+    padding: 5px;
+    margin: 25px 10px 10px 10px;
+  }
+}
+
+.box {
+  border-radius: 8px;
+  padding: 15px;
+  h2 {
+    margin-top: 0;
+  }
 }
 
 .box.white {
-    background-color: white;
-    border-radius: 8px;
-    padding: 15px;
-    box-shadow: 3px 3px 12px $main-color-admin-hover;
-    h2 {
-        margin-top: 0;
+  background-color: white;
+}
+
+.box.white-3d {
+  background-color: white;
+  box-shadow: 3px 3px 12px $main-color-admin-hover;
+}
+
+.box.inset {
+  background-color: #e3edf7;
+  box-shadow: inset 3px 3px 12px #a4bbd0;
+}
+
+.container-header-part {
+  max-width: 100%;
+  overflow: hidden;
+  .header-part {
+    display: flex;
+    .item-header {
+      min-width: 250px;
+      margin: 0 25px;
+      padding: 0 0 0 15px;
+      background-color: white;
+      border-radius: 8px;
+      display: flex;
+      &:before {
+        content: "";
+        width: 15px;
+        height: 100%;
+        display: block;
+        position: relative;
+        left: -15px;
+        border-radius: 8px 0 0 8px;
+      }
     }
+    .item-header.orange {
+      &:before {
+        background-color: $first-color;
+      }
+    }
+    .item-header.pink {
+      &:before {
+        background-color: $second-color;
+      }
+    }
+    .item-header.violet {
+      &:before {
+        background-color: $third-color;
+      }
+    }
+    .item-header.blue {
+      &:before {
+        background-color: $fifth-color;
+      }
+    }
+  }
 }
