--- a/front/src/scss/admin/Admin.scss
+++ b/front/src/scss/admin/Admin.scss
@@ -8,4 +8,9 @@
   min-height: calc(100vh - 40px);
   max-width: 100%;
   width: 100%;
+  color: $main-color-admin-text;
+  h1 {
+    font-size: 46px;
+    margin: 25px 15px 50px 15px;
+  }
 }
