--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -19,42 +19,58 @@ $main-color-admin-text: #27425f;
 $main-color-admin-selected: #4036ae;
 
 #root {
-    font-family: "Montserrat";
-    overflow-x: hidden;
+  font-family: "Montserrat";
+  overflow-x: hidden;
 }
 
 .vertical-center {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .btn-rounded-100 {
-    background-color: transparent;
-    border-radius: 2rem;
-    padding: 8px 25px;
-    font-size: 18px;
-    cursor: pointer;
-    &:focus {
-        outline: none;
-    }
+  background-color: transparent;
+  border-radius: 2rem;
+  padding: 8px 25px;
+  font-size: 18px;
+  cursor: pointer;
+  &:focus {
+    outline: none;
+  }
 }
 .btn-rounded-100 {
-    background-color: transparent;
-    color: white;
-    border: 1px solid white;
+  background-color: transparent;
+  color: white;
+  border: 1px solid white;
 }
 .btn-violet {
-    transition: 0.4s;
-    &:hover {
-        background-color: white;
-        color: #9c5fd4;
-        box-shadow: 2px 6px 12px rgba(0, 0, 0, 0.3);
-    }
+  transition: 0.4s;
+  &:hover {
+    background-color: white;
+    color: #9c5fd4;
+    box-shadow: 2px 6px 12px rgba(0, 0, 0, 0.3);
+  }
 }
 
 .flex {
-    display: flex;
+  display: flex;
+}
+
+.justify-space-between {
+  justify-content: space-between;
+}
+
+.no-style {
+  color: initial;
+  text-decoration: none;
+  &:hover {
+    color: initial;
+    text-decoration: none;
+  }
+  &:focus {
+    outline: none;
+  }
 }
 
 @import "./assets/scss/Login.scss";
