Some fix & feat (user&admin)

--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -79,3 +79,5 @@ $main-color-admin-selected: #4036ae;
 @import "./assets/scss/Header.scss";
 @import "./assets/scss/admin/Dashboard.scss";
 @import "./assets/scss/admin/Admin.scss";
+@import "./assets/scss/user/UserDashboard.scss";
+@import "./assets/scss/user/Event.scss";
