--- a/front/src/assets/scss/user/Event.scss
+++ b/front/src/assets/scss/user/Event.scss
@@ -6,6 +6,7 @@
   .container-detail-event {
     background-color: white;
     margin: 50px auto;
+    box-shadow: 8px 8px 38px rgba(0, 0, 0, 0.1), 0 15px 12px rgba(0, 0, 0, 0.18);
     max-width: 1320px;
     width: calc(100% - 325px);
 
